--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         </main>
         <footer>
             <div class="container">
+                <div class="contacts">
                 <img class="contacts__logo" src="./public/img/logo/logo_Mcapital.png" alt="">
                 <div class="contacts__agences">
                     <ul>
@@ -135,7 +136,8 @@
                     <a href="https://twitter.com/MCapitalPartner" target="blank">TWITTER</a>
                     <p>|</p>
                     <a href="https://www.facebook.com/MCapitalPartners/" target="blank">FACEBOOK</a>
-                </div>              
+                </div> 
+            </div>             
             </div>
         </footer>
     </body>
